[package]
name = "rhai-http"
version = "0.5.2"
edition = "2021"
authors = ["ltabis <ltabis.pro@gmail.com>"]
description = "HTTP module for the rhai scripting language"
license-file = "./LICENSE"
repository = "https://github.com/ltabis/rhai-http"

[dependencies]
rhai = { git = "https://github.com/yonasBSD/rhai", branch = "feat/stdlib", default-features = false, features = ["serde"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
